...
/** "Copy", Copy string to clipboard as in copy and paste */
NSString* COPY_STRING() { return [OTRLanguageManager translatedString:@"Copy"]; }
/** "Could not parse URL.", Error description */
NSString* COULD_NOT_PARSE_URL_STRING() { return [OTRLanguageManager translatedString:@"Could not parse URL."]; }
/** "Created by", Start of sentence that will be followed by names */
NSString* CREATED_BY_STRING() { return [OTRLanguageManager translatedString:@"Created by"]; }
/** "Create New Account", Label for button to create a new account via in band registration */
NSString* CREATE_NEW_ACCOUNT_STRING() { return [OTRLanguageManager translatedString:@"Create New Account"]; }
/** "Create", Title for button to create account */
NSString* CREATE_STRING() { return [OTRLanguageManager translatedString:@"Create"]; }
/** "Creating Account", Title for progress of creating a new account */
NSString* CREATING_ACCOUNT_STRING() { return [OTRLanguageManager translatedString:@"Creating Account"]; }
/** "Custom", Place holder label for custom domains */
...
/** "Did you know you can now help fund future development directly within the app?", prompt users to donate money */
NSString* DID_YOU_KNOW_DONATION_STRING() { return [OTRLanguageManager translatedString:@"Did you know you can now help fund future development directly within the app?"]; }
/** "Your donation will help fund the continued development of xTorChat.", Message shown when about to donate */
NSString* DONATE_MESSAGE_STRING() { return [OTRLanguageManager translatedString:@"Your donation will help fund the continued development of xTorChat."]; }
/** "Donate", Title for donation link */
NSString* DONATE_STRING() { return [OTRLanguageManager translatedString:@"Donate"]; }
/** "Done", Title for button to press when user is finished */
NSString* DONE_STRING() { return [OTRLanguageManager translatedString:@"Done"]; }
/** "Download", Title for button to download something */
NSString* DOWNLOAD_STRING() { return [OTRLanguageManager translatedString:@"Download"]; }
/** "Do Not Disturb", Default message when a user status is set to do not disturb */
NSString* DO_NOT_DISTURB_STRING() { return [OTRLanguageManager translatedString:@"Do Not Disturb"]; }
/** "Database Error",  */
...
/** "Microphone Disabled", microphone permission is disabled */
NSString* Microphone_Disabled() { return [OTRLanguageManager translatedString:@"Microphone Disabled"]; }
/** "To use this feature you must re-enable microphone permissions.", microphone permission is disabled */
NSString* Microphone_Reenable_Please() { return [OTRLanguageManager translatedString:@"To use this feature you must re-enable microphone permissions."]; }
/** "Name", The string describing a buddy's display name */
NSString* NAME_STRING() { return [OTRLanguageManager translatedString:@"Name"]; }
/** "New Account", Title for New Account View */
NSString* NEW_ACCOUNT_STRING() { return [OTRLanguageManager translatedString:@"New Account"]; }
/** "New SSL Certificate", Title for alert when a new SSL certificate is encountered */
NSString* NEW_CERTIFICATE_STRING() { return [OTRLanguageManager translatedString:@"New SSL Certificate"]; }
/** "New Message!", when a new message notification is received */
NSString* NEW_MESSAGE_STRING() { return [OTRLanguageManager translatedString:@"New Message!"]; }
/** "New", For a new settings value */
...
