...
        messagesNavigationController.topViewController.navigationItem.leftItemsSupplementBackButton = YES;
        
        self.splitViewCoordinator.splitViewController = splitViewController;
        rootViewController = splitViewController;
        
      
        if ([[[NSProcessInfo processInfo] environment][@"OTRLaunchMode"] isEqualToString:@"xTorChatTestsDemoData"]) {
            [OTRChatDemo loadDemoChatInDatabase];
        } else if ([[[NSProcessInfo processInfo] environment][@"OTRLaunchMode"] isEqualToString:@"xTorChatUITests"]) {
            [[OTRDatabaseManager sharedInstance].writeConnection readWriteWithBlock:^(YapDatabaseReadWriteTransaction * _Nonnull transaction) {
                [transaction removeAllObjectsInAllCollections];
            }];
        }
...
